--- a/assignment-1/index.html
+++ b/assignment-1/index.html
@@ -4,9 +4,35 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- External CSS linker -->
+        <link rel="stylesheet" href="styles/style.css">
+        <!-- Google font linker (Work Sans) -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Open+Sans&family=Work+Sans:wght@500&display=swap"
+            rel="stylesheet">
         <title>Assignment-1</title>
     </head>
     <body>
+        <main>
+            <!-- Banner section -->
+            <section class="banner-container">
+                <div class="banner-content">
+                    <h2 class="banner-title">All Thinks Are Possible If You
+                        believe</h2>
+                    <p class="section-description">There are many variations of
+                        passages of Lorem Ipsum available, but the majority have
+                        suffered alteration in some form, by injected humour, or
+                        randomised words</p>
+                    <div>
+                        <button class="btn-primary" type="submit">Contact Me</button>
+                    </div>
+                </div>
+            </section>
+        </main>
+        <footer>
 
+        </footer>
     </body>
 </html>
