my-failure section is done

--- a/assignment-1/index.html
+++ b/assignment-1/index.html
@@ -30,6 +30,39 @@
                     </div>
                 </div>
             </section>
+            <!-- My faulures section -->
+            <section class="section-container">
+                <img src="images/person.png" alt="person-image">
+                <div class="my-failure-content">
+                    <h3 class="section-title">My failures of previous year</h3>
+                    <p class="section-description">Contrary to popular belief,
+                        Lorem Ipsum is not simply random text. It has roots in a
+                        piece of classical Latin literature from 45 BC, making
+                        it over 2000 years old. Richard McClintock.</p>
+                    <ul>
+                        <li>
+                            <img class="my-failure-icon" src="images/icons/close.png" alt="">
+                            <p>Contrary to popular belief, is not simply.</p>
+                        </li>
+                        <li>
+                            <img class="my-failure-icon" src="images/icons/close.png" alt="">
+                            <p>Contrary to popular belief, is not simply.</p>
+                        </li>
+                        <li>
+                            <img class="my-failure-icon" src="images/icons/close.png" alt="">
+                            <p>Contrary to popular belief, is not simply.</p>
+                        </li>
+                        <li>
+                            <img class="my-failure-icon" src="images/icons/close.png" alt="">
+                            <p>Contrary to popular belief, is not simply.</p>
+                        </li>
+                        <li>
+                            <img class="my-failure-icon" src="images/icons/close.png" alt="">
+                            <p>Contrary to popular belief, is not simply.</p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
         </main>
         <footer>
 
