--- a/assignment-1/index.html
+++ b/assignment-1/index.html
@@ -41,26 +41,57 @@
                         it over 2000 years old. Richard McClintock.</p>
                     <ul>
                         <li>
-                            <img class="my-failure-icon" src="images/icons/close.png" alt="">
-                            <p>Contrary to popular belief, is not simply.</p>
+                            <img class="my-failure-icon"
+                                src="images/icons/close.png" alt="">
+                            <p class="section-description">Contrary to popular belief, is not simply.</p>
                         </li>
                         <li>
-                            <img class="my-failure-icon" src="images/icons/close.png" alt="">
-                            <p>Contrary to popular belief, is not simply.</p>
+                            <img class="my-failure-icon"
+                                src="images/icons/close.png" alt="">
+                            <p class="section-description">Contrary to popular belief, is not simply.</p>
                         </li>
                         <li>
-                            <img class="my-failure-icon" src="images/icons/close.png" alt="">
-                            <p>Contrary to popular belief, is not simply.</p>
+                            <img class="my-failure-icon"
+                                src="images/icons/close.png" alt="">
+                            <p class="section-description">Contrary to popular belief, is not simply.</p>
                         </li>
                         <li>
-                            <img class="my-failure-icon" src="images/icons/close.png" alt="">
-                            <p>Contrary to popular belief, is not simply.</p>
+                            <img class="my-failure-icon"
+                                src="images/icons/close.png" alt="">
+                            <p class="section-description">Contrary to popular belief, is not simply.</p>
                         </li>
                         <li>
-                            <img class="my-failure-icon" src="images/icons/close.png" alt="">
-                            <p>Contrary to popular belief, is not simply.</p>
+                            <img class="my-failure-icon"
+                                src="images/icons/close.png" alt="">
+                            <p class="section-description">Contrary to popular belief, is not simply.</p>
                         </li>
                     </ul>
+                </div>
+            </section>
+            <!-- My Plans section -->
+            <section class="plan-section">
+                <h3 class="section-title">My Plans</h3>
+                <div class="section-container">
+                    <div class="plan-card">
+                        <img src="images/icons/web.png" alt="">
+                        <h4 class="card-heading">Web Development</h4>
+                        <p class="section-description">I want to start</p>
+                    </div>
+                    <div class="plan-card">
+                        <img src="images/icons/js.png" alt="">
+                        <h4 class="card-heading">Javascript</h4>
+                        <p class="section-description">I want to learn</p>
+                    </div>
+                    <div class="plan-card">
+                        <img src="images/icons/smoke.png" alt="">
+                        <h4 class="card-heading">Smoking Habit</h4>
+                        <p class="section-description">I want to end</p>
+                    </div>
+                    <div class="plan-card">
+                        <img src="images/icons/ecom.png" alt="">
+                        <h4 class="card-heading">e-Commerce</h4>
+                        <p class="section-description">I want to develop</p>
+                    </div>
                 </div>
             </section>
         </main>
