call-now section is done

--- a/assignment-1/index.html
+++ b/assignment-1/index.html
@@ -43,27 +43,32 @@
                         <li>
                             <img class="my-failure-icon"
                                 src="images/icons/close.png" alt="">
-                            <p class="section-description">Contrary to popular belief, is not simply.</p>
+                            <p class="section-description">Contrary to popular
+                                belief, is not simply.</p>
                         </li>
                         <li>
                             <img class="my-failure-icon"
                                 src="images/icons/close.png" alt="">
-                            <p class="section-description">Contrary to popular belief, is not simply.</p>
+                            <p class="section-description">Contrary to popular
+                                belief, is not simply.</p>
                         </li>
                         <li>
                             <img class="my-failure-icon"
                                 src="images/icons/close.png" alt="">
-                            <p class="section-description">Contrary to popular belief, is not simply.</p>
+                            <p class="section-description">Contrary to popular
+                                belief, is not simply.</p>
                         </li>
                         <li>
                             <img class="my-failure-icon"
                                 src="images/icons/close.png" alt="">
-                            <p class="section-description">Contrary to popular belief, is not simply.</p>
+                            <p class="section-description">Contrary to popular
+                                belief, is not simply.</p>
                         </li>
                         <li>
                             <img class="my-failure-icon"
                                 src="images/icons/close.png" alt="">
-                            <p class="section-description">Contrary to popular belief, is not simply.</p>
+                            <p class="section-description">Contrary to popular
+                                belief, is not simply.</p>
                         </li>
                     </ul>
                 </div>
@@ -94,9 +99,16 @@
                     </div>
                 </div>
             </section>
+            <!-- Call now section -->
+            <section class="call-section">
+                <div class="call-now-container">
+                    <h3 class="section-title">Always keep a positive mindset</h3>
+                    <button class="btn-primary" type="submit">Call Now</button>
+                </div>
+            </section>
         </main>
         <footer>
-
+            
         </footer>
     </body>
 </html>
