footer not complete

--- a/assignment-1/index.html
+++ b/assignment-1/index.html
@@ -107,8 +107,25 @@
                 </div>
             </section>
         </main>
-        <footer>
-            
+        <footer class="footer-section">
+            <div class="footer-items">
+                <h3 class="section-title">Future</h3>
+                <p class="section-description">There are many variations of
+                    passages of Lorem Ipsum available, but the majority have
+                    suffered alteration in some form, by injected humour, or
+                    randomised words</p>
+                <p class="section-description">Email : info@gmail.com</p>
+                <p class="section-description">Phone : 01500 00 00 00</p>
+                <div class="social-media"><img src="images/icons/fb.png" alt=""><img
+                        src="images/icons/twitter.png" alt=""><img
+                        src="images/icons/youtube.png" alt=""></div>
+            </div>
+            <div class="footer-items">
+                <h3 class="section-title">Subscribe</h3>
+                <input type="email" name="user" id="email-field"
+                    placeholder="Enter you email">
+                <button type="submit">Subscribe</button>
+            </div>
         </footer>
     </body>
 </html>
