footer section is done

--- a/assignment-1/index.html
+++ b/assignment-1/index.html
@@ -30,7 +30,7 @@
                     </div>
                 </div>
             </section>
-            <!-- My faulures section -->
+            <!-- My failures section -->
             <section class="section-container">
                 <img src="images/person.png" alt="person-image">
                 <div class="my-failure-content">
