--- a/assignment-1/index.html
+++ b/assignment-1/index.html
@@ -73,6 +73,31 @@
                     </ul>
                 </div>
             </section>
+            <!-- My Learnings section -->
+            <section class="my-learning-container">
+                <h3 class="section-title">My Learnings for previous year</h3>
+                <div class="learnigs">
+                    <div class="topic">
+                        <img src="" alt="">
+                        <h3 class="topic-title">Mobile App Development</h3>
+                        <p class="topic-subtitle">with <span>Flutter</span></p>
+                    </div>
+                </div>
+                <div class="learnigs">
+                    <div class="topic">
+                        <img src="" alt="">
+                        <h3 class="topic-title">Mobile App Development</h3>
+                        <p class="topic-subtitle">with <span>Flutter</span></p>
+                    </div>
+                </div>
+                <div class="learnigs">
+                    <div class="topic">
+                        <img src="" alt="">
+                        <h3 class="topic-title">Mobile App Development</h3>
+                        <p class="topic-subtitle">with <span>Flutter</span></p>
+                    </div>
+                </div>
+            </section>
             <!-- My Plans section -->
             <section class="plan-section">
                 <h3 class="section-title">My Plans</h3>
