--- a/assignment-1/index.html
+++ b/assignment-1/index.html
@@ -149,7 +149,7 @@
                 <h3 class="section-title">Subscribe</h3>
                 <input type="email" name="user" id="email-field"
                     placeholder="Enter you email">
-                <button type="submit">Subscribe</button>
+                <button class="btn-primary" type="submit">Subscribe</button>
             </div>
         </footer>
     </body>
