--- a/assignment-2/index.html
+++ b/assignment-2/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>G3 Article</title>
         <!-- Banner stylesheet linker -->
-        <link rel="stylesheet" href="styles/banner.css">
+        <link rel="stylesheet" href="CSS_styles/banner.css">
         <!-- Features stylesheet linker -->
         <link rel="stylesheet" href="styles/features.css">
         <!-- Sponsors stylesheet linker -->
@@ -15,8 +15,53 @@
         <link rel="stylesheet" href="styles/bonus-section.css">
         <!-- Footer stylesheet linker -->
         <link rel="stylesheet" href="styles/footer.css">
+        <!-- Google font linker (Work Sans) -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Open+Sans&family=Work+Sans:wght@500&display=swap"
+            rel="stylesheet">
     </head>
     <body>
-
+        <header>
+            <nav class="nav-bar">
+                <div>
+                    <h3 class="brand-title">G3 Architects</h3>
+                </div>
+                <div>
+                    <ul>
+                        <li>
+                            <a href="">Home</a>
+                        </li>
+                        <li>
+                            <a href="">About</a>
+                        </li>
+                        <li>
+                            <a href="">Contact Us</a>
+                        </li>
+                        <li>
+                            <a href="">Login</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+            <!-- Banner section -->
+            <section class="banner-section">
+                <div class="banner-content">
+                    <h2 class="banner-title">Brand New</h2>
+                    <h2 class="banner-title">Group of Architects</h2>
+                    <p class="description">There are many variations of passages
+                        of
+                        Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or
+                        randomised
+                        words which don't look even</p>
+                    <button class="btn-primary">Explore More</button>
+                </div>
+                <div class="banner-image">
+                    <img src="images/banner.png" alt="">
+                </div>
+            </section>
+        </header>
     </body>
 </html>
