--- a/assignment-2/index.html
+++ b/assignment-2/index.html
@@ -8,11 +8,11 @@
         <!-- Banner stylesheet linker -->
         <link rel="stylesheet" href="CSS_styles/banner.css">
         <!-- Features stylesheet linker -->
-        <link rel="stylesheet" href="styles/features.css">
+        <link rel="stylesheet" href="CSS_styles/features.css">
         <!-- Sponsors stylesheet linker -->
-        <link rel="stylesheet" href="styles/sponsor.css">
+        <link rel="stylesheet" href="CSS_styles/sponsor.css">
         <!-- Bonus-section stylesheet linker -->
-        <link rel="stylesheet" href="styles/bonus-section.css">
+        <link rel="stylesheet" href="CSS_styles/bonus-section.css">
         <!-- Footer stylesheet linker -->
         <link rel="stylesheet" href="styles/footer.css">
         <!-- Google font linker (Work Sans) -->
@@ -63,5 +63,111 @@
                 </div>
             </section>
         </header>
+        <main>
+            <!-- feature top section  -->
+            <section class="top-container">
+                <div class="grid-gellary">
+                    <div class="photo"><img src="images/team1.png" alt=""></div>
+                    <div class="photo"><img src="images/team2.png" alt=""></div>
+                    <div class="photo"><img src="images/team3.png" alt=""></div>
+                    <div class="photo"><img src="images/team4.png" alt=""></div>
+                </div>
+                <div class="our-feature">
+                    <h3 class="section-title"><span style="font-weight: 500;
+                            color: #727272;">Quick list</span> of Our </h3>
+                    <h3 class="section-title"><span style="font-weight: 700;
+                            color: #FF900E;">Features</span></h3>
+                    <p class="description">There are many variations of passages
+                        of Lorem Ipsum
+                        available, but the majority have suffered alteration in
+                        some form, by injected humour, or randomised words which
+                        don't look even</p>
+                    <button class="btn-primary">Explore More</button>
+                </div>
+            </section>
+            <!-- feature middle section  -->
+            <section class="middle-container">
+                <div class="feature-description-div">
+                    <div class="feature-title-div">
+                        <h3 class="section-title">Features you will</h3>
+                        <h3 class="section-title">love & enjoy</h3>
+                    </div>
+                    <p class="description">There are many variations of passages
+                        of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or
+                        randomised words which don't look even
+                    </p>
+                    <div class="features">
+                        <div class="feature">
+                            <h4 class="small-title">Dexktop & Mobile Version</h4>
+                            <p class="description">There are many variations of
+                                passages of Lorem Ipsum available, but the
+                                majority
+                                have suffered alteration in some form, by
+                                injected
+                                humour, or randomised...........</p>
+                        </div>
+                        <div class="feature">
+                            <h4 class="small-title">Drag & Drop Builder</h4>
+                            <p class="description">There are many variations of
+                                passages of Lorem Ipsum available, but the
+                                majority
+                                have suffered alteration in some form, by
+                                injected
+                                humour, or randomised...........</p>
+                        </div>
+                        <div class="feature">
+                            <h4 class="small-title">Awesome Modern Design</h4>
+                            <p class="description">There are many variations of
+                                passages of Lorem Ipsum available, but the
+                                majority
+                                have suffered alteration in some form, by
+                                injected
+                                humour, or randomised...........</p>
+                        </div>
+                    </div>
+                    <button class="btn-primary">
+                        <h2>10+ Year</h2>
+                        <p class="description">Experience</p>
+                    </button>
+                </div>
+                <div class="feature-image-div">
+                    <img src="images/architect.png" alt="">
+                </div>
+            </section>
+            <!-- feature bottom section  -->
+            <section class="facts-container">
+                <div>
+                    <h3 class="section-title">Some Facts</h3>
+                    <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+                    </p>
+                </div>
+                <div class="facts">
+                    <div class="fact">
+                        <img src="images/icons/ribon.png" alt="">
+                        <h3 class="number">54</h3>
+                        <p class="sub-title">Awards Winnings</p>
+                    </div>
+                    <div class="fact">
+                        <img src="images/icons/projects.png" alt="">
+                        <h3 class="number">1458</h3>
+                        <p class="sub-title">Project Finished</p>
+                    </div>
+                    <div class="fact">
+                        <img src="images/icons/customers.png" alt="">
+                        <h3 class="number">590</h3>
+                        <p class="sub-title">Clients Worked</p>
+                    </div>
+                    <div class="fact">
+                        <img src="images/icons/email.png" alt="">
+                        <h3 class="number">22578</h3>
+                        <p class="sub-title">Email Send</p>
+                    </div>
+                </div>
+            </section>
+            <section class="container">
+
+            </section>
+        </main>
     </body>
 </html>
