--- a/assignment-2/index.html
+++ b/assignment-2/index.html
@@ -67,10 +67,10 @@
             <!-- feature top section  -->
             <section class="top-container">
                 <div class="grid-gellary">
-                    <div class="photo"><img src="images/team1.png" alt=""></div>
-                    <div class="photo"><img src="images/team2.png" alt=""></div>
-                    <div class="photo"><img src="images/team3.png" alt=""></div>
-                    <div class="photo"><img src="images/team4.png" alt=""></div>
+                    <div><img src="images/team1.png" alt=""></div>
+                    <div><img src="images/team2.png" alt=""></div>
+                    <div><img src="images/team3.png" alt=""></div>
+                    <div><img src="images/team4.png" alt=""></div>
                 </div>
                 <div class="our-feature">
                     <h3 class="section-title"><span style="font-weight: 500;
@@ -139,7 +139,9 @@
             <section class="facts-container">
                 <div>
                     <h3 class="section-title">Some Facts</h3>
-                    <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+                    <p class="description">There are many variations of passages
+                        of Lorem Ipsum available, but the majority have suffered
+                        alteration.
                     </p>
                 </div>
                 <div class="facts">
@@ -165,9 +167,35 @@
                     </div>
                 </div>
             </section>
-            <section class="container">
-
+            <!-- sponsor section  -->
+            <section class="sponsor-container">
+                <div class="sponsor-content">
+                    <h2 class="section-title">Our Sponspors</h2>
+                    <p class="description">There are many variations of passages
+                        of Lorem Ipsum available, but the majority have suffered
+                        alteration.</p>
+                </div>
+                <div class="sponsors">
+                    <div class="sponsor">
+                        <img src="images/sponsors/spotify.png" alt="">
+                    </div>
+                    <div class="sponsor">
+                        <img src="images/sponsors/amazon.png" alt="">
+                    </div>
+                    <div class="sponsor">
+                        <img src="images/sponsors/google.png" alt="">
+                    </div>
+                    <div class="sponsor">
+                        <img src="images/sponsors/telerama.png" alt="">
+                    </div>
+                    <div class="sponsor">
+                        <img src="images/sponsors/figma.png" alt="">
+                    </div>
+                </div>
             </section>
         </main>
+        <footer>
+            <p>All rights reserved copyright@2023 startup landing page design</p>
+        </footer>
     </body>
 </html>
