--- a/assignment-2/index.html
+++ b/assignment-2/index.html
@@ -14,7 +14,7 @@
         <!-- Bonus-section stylesheet linker -->
         <link rel="stylesheet" href="CSS_styles/bonus-section.css">
         <!-- Footer stylesheet linker -->
-        <link rel="stylesheet" href="styles/footer.css">
+        <link rel="stylesheet" href="CSS_styles/footer.css">
         <!-- Google font linker (Work Sans) -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
