bonus section is done

--- a/assignment-2/index.html
+++ b/assignment-2/index.html
@@ -193,6 +193,14 @@
                     </div>
                 </div>
             </section>
+            <!-- bonus section  -->
+            <section class="contact-section">
+                <div class="sponsor-content">
+                    <h2 class="section-title">Contact Us</h2>
+                    <p class="description">We are about a click distance from you to give better service</p>
+                </div>
+                <button class="btn-primary">Call Us</button>
+            </section>
         </main>
         <footer>
             <p>All rights reserved copyright@2023 startup landing page design</p>
