responsive is done

--- a/assignment-2/index.html
+++ b/assignment-2/index.html
@@ -21,6 +21,11 @@
         <link
             href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Open+Sans&family=Work+Sans:wght@500&display=swap"
             rel="stylesheet">
+        <style>
+            .hide{
+                display: none;
+            }
+        </style>
     </head>
     <body>
         <header>
@@ -195,9 +200,10 @@
             </section>
             <!-- bonus section  -->
             <section class="contact-section">
-                <div class="sponsor-content">
+                <div>
                     <h2 class="section-title">Contact Us</h2>
-                    <p class="description">We are about a click distance from you to give better service</p>
+                    <p class="description">We are about a click distance from
+                        you to give better service</p>
                 </div>
                 <button class="btn-primary">Call Us</button>
             </section>
