--- a/assignment-3/index.html
+++ b/assignment-3/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- tailwind css linker -->
     <script src="https://cdn.tailwindcss.com"></script>
-
+    <link rel="icon" href="images/business.png"></link:rl>
     <title>Legal Solution Tailwind</title>
 </head>
 
