--- a/assignment-3/index.html
+++ b/assignment-3/index.html
@@ -7,21 +7,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- tailwind css linker -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="icon" href="images/business.png"></link:rl>
+    <!-- favicon -->
+    <link rel="icon" href="images/business.png">
+    </link:rl>
+    <!-- <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap');
+        /* font-family: 'Poppins', sans-serif; */
+        /* font-family: 'EB Garamond', serif; */
+    </style> -->
+ 
+
     <title>Legal Solution Tailwind</title>
 </head>
 
 <body>
-    <header>
+    <header class="max-w-6xl mx-auto">
 
         <nav class="bg-white border-gray-200 dark:bg-gray-900">
-            <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+            <div class="max-w-screen-xl flex flex-wrap items-center justify-between p-4">
                 <a href="#" class="flex items-center">
                     <img src="images/logo2.png" class="h-8 mr-3" alt="Logo" />
                 </a>
                 <div class="flex md:order-2">
                     <button type="button"
-                        class="text-white bg-[#B68C5A] hover:bg-[#000000] focus:outline-none font-medium rounded-lg text-sm px-6 py-4 text-center mr-3 md:mr-0 dark:bg-blue-600 dark:hover:bg-[#B68C5A]">Free Consultation</button>
+                        class="text-white bg-[#B68C5A] hover:bg-[#000000] focus:outline-none font-medium rounded-lg text-sm px-6 py-4 text-center mr-3 md:mr-0 dark:bg-blue-600 dark:hover:bg-[#B68C5A]">Free
+                        Consultation</button>
                     <button data-collapse-toggle="navbar-cta" type="button"
                         class="inline-flex items-center p-2 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
                         aria-controls="navbar-cta" aria-expanded="false">
@@ -64,6 +75,15 @@
         </nav>
 
         <!-- banner section -->
+        <div class="p-4 static">
+            <img class="mx-auto w-full" src="images/banner.png" alt="">
+            <div class="absolute top-1/3 left-1/3 text-center">
+                <h1 class="text-5xl font-extrabold font-heading">We Provide Effective Legal Solutions</h1>
+                <p class="font-paragraph">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour.</p>
+                <input type="text"><button>Search</button>
+            </div>
+        </div>
     </header>
     <main>
         <!-- legal area section -->
@@ -78,6 +98,10 @@
     <footer>
 
     </footer>
+
+
+    <!-- tailwind.config.js -->
+    <script src="tailwind.config.js"></script>
 </body>
 
 </html>
