tailwind.config.js file added

--- a/assignment-3/index.html
+++ b/assignment-3/index.html
@@ -81,7 +81,7 @@
                 <h1 class="text-5xl font-extrabold font-heading">We Provide Effective Legal Solutions</h1>
                 <p class="font-paragraph">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                     alteration in some form, by injected humour.</p>
-                <input type="text"><button>Search</button>
+                <input type="text" class="px-4 py-2"><button>Search</button>
             </div>
         </div>
     </header>
