--- a/assignment-3/index.html
+++ b/assignment-3/index.html
@@ -75,11 +75,11 @@
         </nav>
 
         <!-- banner section -->
-        <div class="p-4 w-full flex flex-col-reverse sm:relative">
+        <div class="p-4 w-full h-50vh flex flex-col sm:relative">
 
-            <img class="w-full" src="images/banner.png" alt="">
+            <img class="w-full h-full" src="images/banner.png" alt="">
 
-            <div class="w-1/2 sm:absolute sm:translate-x-1/2 sm:translate-y-full text-center sm:text-white">
+            <div class="sm:w-1/2 h-full sm:absolute sm:translate-x-1/2 sm:translate-y-1/3 text-center sm:text-white">
                 <h1 class="text-4xl sm:text-5xl font-extrabold font-heading pb-6 pt-4 sm:pt-0">We Provide Effective
                     Legal Solutions</h1>
                 <p class="font-paragraph pb-6 text-sm sm:text-base">
